--- a/resources/css/adminCss/style.css
+++ b/resources/css/adminCss/style.css
@@ -34,9 +34,10 @@
     transition: .5s;
 }
 
-.btn.btn-primary {
+.btn.btn-primary,.btn.btn-info {
     color: #FFFFFF;
 }
+
 
 .btn-square {
     width: 38px;
